
// Create a class named AppConstants
class AppConstants {
  // Declare a static const variable named avengerServiceBaseUrl and assign the URL value 
  static const avengerServiceBaseUrl = "http://192.168.203.149:9999/api";
  
  // Declare a static const variable named avengerServiceGetAllAvengerEndPoint and assign the URN value 
  static const avengerServiceGetAllAvengerEndPoint = "/avengers";
  
  // Declare a static const variable named avengerServiceCreateNewHeroEndPoint and assign the URN value 
  static const avengerServiceCreateNewHeroEndPoint = "/add/avengers";
  
  // Declare a static const variable named avengerServiceEditHeroEndPoint and assign the URN value 
  static const avengerServiceEditHeroEndPoint = "/avengers";
}